@@ -28,21 +28,30 @@ my @tests = (
 	},
 	# En-passant.
 	{
+		name => 'en-passant not possible from start after 1. e4',
+		premoves => [qw(e2e4)],
+		fen => 'rnbqkbnr/pppppppp/8/8/4P3/8/PPPP1PPP/RNBQKBNR b KQkq - 0 1',
+		fen_force_ep => 'rnbqkbnr/pppppppp/8/8/4P3/8/PPPP1PPP/RNBQKBNR b KQkq e3 0 1',
+	},
+	{
 		name => 'en-passant possible',
 		pos => 'rnbqkbnr/pppp1ppp/4p3/4P3/8/8/PPPP1PPP/RNBQKBNR b KQkq - 0 2',
 		premoves => [qw(d7d5)],
 		fen => 'rnbqkbnr/ppp2ppp/4p3/3pP3/8/8/PPPP1PPP/RNBQKBNR w KQkq d6 0 3',
+		fen_force_ep => 'rnbqkbnr/ppp2ppp/4p3/3pP3/8/8/PPPP1PPP/RNBQKBNR w KQkq d6 0 3',
 	},
 	{
 		name => 'capture reveals check',
 		pos => '8/8/8/8/R2p3k/8/4P3/K7 w - - 0 1',
-		premvoes => [qw(e2e4)],
+		premoves => [qw(e2e4)],
 		fen => '8/8/8/8/R2pP2k/8/8/K7 b - - 0 1',
+		fen_force_ep => '8/8/8/8/R2pP2k/8/8/K7 b - e3 0 1',
 	},
 	{
 		name => 'repair illegal ep square',
 		pos => '8/8/8/8/R2pP2k/8/8/K7 b - e3 0 1',
 		fen => '8/8/8/8/R2pP2k/8/8/K7 b - - 0 1',
+		fen_force_ep => '8/8/8/8/R2pP2k/8/8/K7 b - e3 0 1',
 	}
 );
 
@@ -54,7 +63,11 @@ foreach my $test (@tests) {
 		ok $pos->doMove($move), "$test->{name}: premove $movestr should be legal";
 	}
 
-	is $pos->toFEN, $test->{fen}, "$test->{name}: resulting FEN",
+	is $pos->toFEN, $test->{fen}, "$test->{name}: resulting FEN";
+	if ($test->{fen_force_ep}) {
+		is $pos->toFEN(force_en_passant_square => 1), $test->{fen_force_ep},
+			"$test->{name}: resulting FEN with forced ep square";
+	}
 }
 
 done_testing;
