@@ -1,6 +1,8 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+  - toFEN now by default only adds ep square, when ep capture is legal
+	- LAN does now really do long algebraic notation, not coordinate notation
 	- stringification is no longer overloaded
 	- changed spelling from half_move/HALF_MOVE/halfMove to
 	  halfmove/HALFMOVE/halfmove everyhwere
